<!-- chose_profession_fragment.xml @subs -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/usernameLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username_label" />

    <EditText
        android:id="@+id/usernameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/username_hint"
        android:inputType="textPersonName"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/chooseProfessionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_profession_label" />

    <Spinner
        android:id="@+id/chooseProfessionSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/confirmProfessionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_profession_button" />

</LinearLayout>