<?xml version="1.0" encoding="utf-8"?>
<!-- @subs make this seski-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".regandlogin.EmailVerifyActivitiy"
    android:gravity="center">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/gmailIdLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gmail_label" />

            <EditText
                android:id="@+id/gmailIdField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/gmail_id_hint"
                android:inputType="textEmailAddress"
                android:autofillHints="@string/gmail_id_hint"
                android:maxEms="10"
                android:minEms="10" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/otpLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/otp_label" />

            <EditText
                android:id="@+id/otpField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/otp_hint"
                android:inputType="number"
                android:autofillHints="@string/otp_hint"
                android:maxEms="10"
                android:minEms="10" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/getOtpButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/get_otp_label"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/statusLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@android:color/holo_red_dark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/nextButton"
                app:layout_constraintStart_toEndOf="@+id/getOtpButton"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/nextButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/next_label"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</RelativeLayout>