<?xml version="1.0" encoding="utf-8"?>
<!-- @subs make this seskio-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".regandlogin.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lin_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">


        <Button
            android:id="@+id/registerOrSignInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_or_sign_in_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/otpField" />

        <EditText
            android:id="@+id/phnoField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:hint="@string/username_hint"
            android:inputType="textPersonName"
            android:maxEms="10"
            android:minEms="10"
            android:textSize="14sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/phnoLabel"
            app:layout_constraintEnd_toEndOf="parent" />


        <EditText
            android:id="@+id/otpField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="132dp"
            android:autofillHints="password"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:maxEms="10"
            android:minEms="10"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <TextView
            android:id="@+id/otpLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="1dp"
            android:text="@string/password_label"
            app:layout_constraintBaseline_toBaselineOf="@+id/otpField"
            app:layout_constraintEnd_toStartOf= "@+id/phnoField" />

        <TextView
            android:id="@+id/phnoLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="11dp"
            android:text="@string/username_label"
            app:layout_constraintBottom_toTopOf="@+id/otpField"
            app:layout_constraintEnd_toStartOf="@+id/phnoField" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/g_sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/errorLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:scrollHorizontally="false"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark"
            app:layout_constraintBottom_toTopOf="@+id/g_sign_in_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>